# satellite_splat

./: .gitignore  README.md  ns-train-debug.py  pyproject.toml
satellite_splat/: effective_rank.py  satellite_splat_datamanager.py  satellite_splat_dataparser.py  satellite_splat_method.py  satellite_splat_model.py  satellite_splat_pipeline.py  satellite_splat_trainer.py  satellite_splat_viewer.py
