[project]
name = "satellite_splat"
description = "Template repository for creating and registering new methods in nerfstudio."
version = "114514"

dependencies = ["nerfstudio >= 0.3.0"] 

[tool.setuptools.packages.find]
include = ["satellite_splat*"]

# register the entry point of satellite_splat here:
[project.entry-points.'nerfstudio.method_configs']
satellite_splat = 'satellite_splat.satellite_splat_method:satellite_splat'
